--- a/css/main.css
+++ b/css/main.css
@@ -500,7 +500,7 @@ button, input, select {
   cursor: pointer;
 }
 
-.contact-form.white-text h3, .contact-form.white-text p {
+.white-text h3, .white-text p {
   color: #fff !important;
 }
 
@@ -1198,6 +1198,97 @@ button, input, select {
     max-height: 100%;
   }
 }
+.gallery-slider .nav-wrapper .next-slide:hover, .gallery-slider .nav-wrapper .prev-slide:hover {
+  filter: drop-shadow(0px 4px 22px rgba(255, 246, 26, 0.6));
+  background: #FFF61A;
+}
+
+.popup-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  z-index: 99;
+  opacity: 0;
+  visibility: hidden;
+}
+.popup-wrapper .popup-close {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 40;
+}
+.popup-wrapper .popup-form {
+  max-width: 560px;
+  height: auto;
+  background: #fff;
+  border-radius: 5px;
+  padding: 60px 80px;
+  display: block;
+  max-height: 512px;
+  margin-top: 100px;
+  z-index: 50;
+}
+.popup-wrapper .popup-title {
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 120%;
+  color: #000000;
+  margin-bottom: 40px;
+  text-align: center;
+}
+.popup-wrapper form {
+  display: flex;
+  flex-direction: column;
+}
+.popup-wrapper form input:not([type=submit]) {
+  width: 100%;
+  margin-bottom: 20px;
+  background: #F8F8F8;
+  border-radius: 30px;
+  padding: 23px 40px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: #AEAEAE;
+}
+.popup-wrapper form input[type=submit] {
+  background: #FFF61A;
+  box-shadow: 0px 4px 22px rgba(255, 246, 26, 0.6);
+  border-radius: 60px;
+  width: 100%;
+  font-weight: 500;
+  font-size: 14px;
+  color: #000000;
+  padding: 23px 0px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.popup-wrapper form input[type=submit]:hover {
+  background: #FAF118;
+}
+.popup-wrapper p {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 140%;
+  color: #000000;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.open {
+  opacity: 1;
+  visibility: visible;
+}
+
 @media (max-width: 991px) {
   .title-wrapper h2.title {
     font-size: 48px;
