--- a/css/main.css
+++ b/css/main.css
@@ -1430,6 +1430,11 @@ button, input, select {
   }
 }
 @media (max-width: 768px) {
+  .popup-wrapper .popup-form {
+    padding: 30px 20px;
+    margin-top: 30px;
+  }
+
   .product-page.main-screen .main-screen__inner h1 {
     font-size: 50px;
   }
